# llm-iaedu

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  llm_iaedu.py  pyproject.toml
docs/: CHECKLIST.md  QUALITY_GATES.md  REQUIREMENTS.md  ROADMAP.md  VISION.md
scripts/: setup.sh
