[project]
name = "llm-iaedu"
version = "0.1"
description = "LLM plugin for iaedu-adapter"
readme = "README.md"
authors = [{name = "Rodolfo Matos"}]
license = {text = "Apache-2.0"}
dependencies = [
    "llm",
    "httpx"
]
requires-python = ">3.7"

[project.urls]
Homepage = "https://github.com/rodolfomatos/iaedu-adapter"

[project.entry-points.llm]
iaedu = "llm_iaedu"