[project]
name = "llm-iaedu"
version = "0.4"
description = "LLM plugin for iaedu.pt API — no adapter required"
readme = "README.md"
authors = [{name = "Rodolfo Matos", email = "rodolfo.matos@gmail.com"}]
license = "Apache-2.0"
requires-python = ">=3.8"
keywords = ["llm", "iaedu", "plugin", "cli"]
dependencies = [
    "llm",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/rodolfomatos/llm-iaedu"
Repository = "https://github.com/rodolfomatos/llm-iaedu"
"Bug Tracker" = "https://github.com/rodolfomatos/llm-iaedu/issues"
Changelog = "https://github.com/rodolfomatos/llm-iaedu/blob/main/CHANGELOG.md"

[project.scripts]
llm-iaedu = "llm_iaedu:main"

[project.entry-points.llm]
iaedu = "llm_iaedu"
